# merchai

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  headless_demo.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dashboard.py  demo.py  extraction_demo.py  perplexity_demo.py
data/: merchai.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: MerchAI.jsx  main.jsx
src/: extraction.py  logger.py  pipeline.py  prompts.py  storage.py
src/infra/: __init__.py  headless_runner.py
src/metrics/: share_of_voice.py
src/tracking/: issue_2.py  perplexity_client.py
tests/: test_extraction.py  test_mypy_native.py  test_mypy_typing.py  test_pytest.py  test_ruff.py  test_share_of_voice.py
