[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merchai-nobe"
version = "0.1.0"
description = "MerchAI NOBE Analysis App"
authors = [{name = "MerchAI Team"}]
dependencies = [
    "requests",
    "flask",
    "flask-cors",
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
