[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merchai-nobe"
version = "0.1.0"
description = "MerchAI NOBE Analysis App"
authors = [{name = "MerchAI Team"}]
dependencies = [
    "requests",
    "selenium>=4.0.0",
    "streamlit",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "types-requests",
    "pandas-stubs"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
